--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 					<h1>VideoStar Pro</h1>
    				 <span>Code working</span>
  			 </div>
-		  <div class="get"><a href="itms-services://?action=download-manifest&url=https://hamatech.netlify.app//plist/videostar.plist">GET</a>
+		  <div class="get"><a href="itms-services://?action=download-manifest&url=https://hamatech.netlify.app//plist/videostarold.plist">GET</a>
 </div>
 </li><div class="br"></div>
 
