--- a/index.html
+++ b/index.html
@@ -143,10 +143,68 @@
 		  <li class="li">
  		<img src="img/picsart.png">
   				<div class="text">
-					<h1>Picsar</h1>
-   				 <span>Hack</span>
+					<h1>Picsart</h1>
+   				 <span>Hack&Android</span>
  			 </div>
 		  <div class="get"><a href="https://www.mediafire.com/file/lu93g15wq9ru8os/Picsart.hamasade.apk/file">GET</a>
+</div>
+</li><div class="br"></div>
+
+
+
+  <li class="li">
+ 		<img src="img/snapchat.png">
+  				<div class="text">
+					<h1>Snapchat</h1>
+   				 <span>Android&Dark Mode&Emoji Iphone</span>
+ 			 </div>
+		  <div class="get"><a href="https://www.mediafire.com/file/q66yn1qstpa27bm/SNAPCHAT-Telegram-%2540HamaSade.apk/file">GET</a>
+</div>
+</li><div class="br"></div>
+
+
+  <li class="li">
+ 		<img src="img/alightmotion.png">
+  				<div class="text">
+					<h1>Alight Motion</h1>
+   				 <span>Alight Motion Hack Android</span>
+ 			 </div>
+		  <div class="get"><a href="https://www.mediafire.com/file/op4dev2k60t1r10/HamaSade_Alight.apk/file">GET</a>
+</div>
+</li><div class="br"></div>
+
+
+
+<li class="li">
+ 		<img src="img/qrbarcode.png">
+  				<div class="text">
+					<h1>qrbarcode</h1>
+   				 <span>ANDROID</span>
+ 			 </div>
+		  <div class="get"><a href="https://www.mediafire.com/file/0ww1rvpawgememb/barcode.hamasade.apk/file">GET</a>
+</div>
+</li><div class="br"></div>
+
+
+<li class="li">
+ 		<img src="img/qrbarcode.png">
+  				<div class="text">
+					<h1>qrbarcode</h1>
+   				 <span>ANDROID</span>
+ 			 </div>
+		  <div class="get"><a href="https://www.mediafire.com/file/0ww1rvpawgememb/barcode.hamasade.apk/file">GET</a>
+</div>
+</li><div class="br"></div>
+
+
+
+<li class="li">
+ 		<img src="img/.png">
+  				<div class="text">
+					<h1>qrbarcode</h1>
+   				 <span>ANDROID</span>
+ 			 </div>
+		  <div class="get"><a href="https://www.mediafire.com/file/0ww1rvpawgememb/barcode.hamasade.apk/file">GET</a>
 </div>
 </li><div class="br"></div>
 
