--- a/index.html
+++ b/index.html
@@ -187,24 +187,24 @@
 
 
 <li class="li">
- 		<img src="img/qrbarcode.png">
+ 		<img src="img/capcut.png">
   				<div class="text">
-					<h1>qrbarcode</h1>
-   				 <span>ANDROID</span>
+					<h1>CapCut</h1>
+   				 <span>ANDROID&Hacked</span>
  			 </div>
-		  <div class="get"><a href="https://www.mediafire.com/file/0ww1rvpawgememb/barcode.hamasade.apk/file">GET</a>
+		  <div class="get"><a href="https://www.mediafire.com/file/4bkz6ixqm03mq1x/Capcut_%2540Hamasade.apk/file">GET</a>
 </div>
 </li><div class="br"></div>
 
 
 
 <li class="li">
- 		<img src="img/.png">
+ 		<img src="img/inshot.png">
   				<div class="text">
-					<h1>qrbarcode</h1>
-   				 <span>ANDROID</span>
+					<h1>Inshot</h1>
+   				 <span>ANDROID&Hacked</span>
  			 </div>
-		  <div class="get"><a href="https://www.mediafire.com/file/0ww1rvpawgememb/barcode.hamasade.apk/file">GET</a>
+		  <div class="get"><a href="https://www.mediafire.com/file/un0etevgnv0nq3u/inshot_%2540Hamasade.apk/file">GET</a>
 </div>
 </li><div class="br"></div>
 
