--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 					<h1>HAMASTORE</h1>
    				 <span>Web App Download</span>
  			 </div>
-		  <div class="get"><a href="Hama Store.mobileconfig">GET</a>
+		  <div class="get"><a href="HAMA STORE.mobileconfig">GET</a>
 </div>
 </li><div class="br"></div>
 
