--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
 		  <li class="li">
  		<img src="img/videostar.png">
   				<div class="text">
-					<h1>VideoStar Pro</h1>
+					<h1>VideoStar</h1>
    				 <span>Code working</span>
  			 </div>
-		  <div class="get"><a href="itms-services://?action=download-manifest&url=https://hamatech.netlify.app//plist/videostarold.plist">GET</a>
+		  <div class="get"><a href="itms-services://?action=download-manifest&url=https://hamastore.netlify.app//plist/videostarold.plist">GET</a>
 </div>
 </li><div class="br"></div>
 
@@ -46,7 +46,7 @@
 				 <h1>VideoStarPro</h1>
    				 <span>All future unlock</span>
  			 </div>
-		  <div class="get"><a href="itms-services://?action=download-manifest&url=https://hamatech.netlify.app//plist/videostarpro.plist">GET</a>
+		  <div class="get"><a href="itms-services://?action=download-manifest&url=https://hamastore.netlify.app//plist/videostarpro.plist">GET</a>
 </div>
 </li><div class="br"></div>
 
@@ -57,7 +57,7 @@
 				 <h1>Snapchat Maybe</h1>
    				 <span>Ip band fix</span>
  			 </div>
-		  <div class="get"><a href="itms-services://?action=download-manifest&url=https://hamatech.netlify.app//plist/snapchatmaybe.plist">GET</a>
+		  <div class="get"><a href="itms-services://?action=download-manifest&url=https://hamastore.netlify.app//plist/snapchatmaybe.plist">GET</a>
 </div>
 </li><div class="br"></div>
 
@@ -69,7 +69,7 @@
 				 <h1>PPSSPP</h1>
    				 <span>Gold Premium Unlock</span>
  			 </div>
-		  <div class="get"><a href="itms-services://?action=download-manifest&url=https://hamatech.netlify.app//plist/ppsspp.plist">GET</a>
+		  <div class="get"><a href="itms-services://?action=download-manifest&url=https://hamastore.netlify.app//plist/ppsspp.plist">GET</a>
 </div>
 </li><div class="br"></div>
 
@@ -82,7 +82,7 @@
 				 <h1>MyIp</h1>
    				 <span>Find Ip Movbile All</span>
  			 </div>
-		  <div class="get"><a href="itms-services://?action=download-manifest&url=https://hamatech.netlify.app//plist/myip.plist">GET</a>
+		  <div class="get"><a href="itms-services://?action=download-manifest&url=https://hamastore.netlify.app//plist/myip.plist">GET</a>
 </div>
 </li><div class="br"></div>
 
@@ -92,7 +92,7 @@
 				 <h1>Inshot</h1>
    				 <span>Inshot Gold Premium</span>
  			 </div>
-		  <div class="get"><a href="itms-services://?action=download-manifest&url=https://hamatech.netlify.app//plist/inshot.plist">GET</a>
+		  <div class="get"><a href="itms-services://?action=download-manifest&url=https://hamastore.netlify.app//plist/inshot.plist">GET</a>
 </div>
 </li><div class="br"></div>
 
@@ -104,7 +104,7 @@
 				 <h1>Pubg Mobile </h1>
    				 <span>Anti Band Vip HAMA STORE</span>
  			 </div>
-		  <div class="get"><a href="itms-services://?action=download-manifest&url=https://hamatech.netlify.app//plist/pubgm.plist">GET</a>
+		  <div class="get"><a href="itms-services://?action=download-manifest&url=https://hamastore.netlify.app//plist/pubgm.plist">GET</a>
 </div>
 </li><div class="br"></div>
 
@@ -116,7 +116,7 @@
 					<h1>Cpu-x</h1>
    				 <span></span>
  			 </div>
-        <div class="get"><a href="itms-services://?action=download-manifest&url=https://hamatech.netlify.app//plist/cpu.plist">GET</a>
+        <div class="get"><a href="itms-services://?action=download-manifest&url=https://hamastore.netlify.app//plist/cpu.plist">GET</a>
 </div>
 </li><div class="br"></div>
 
